--- a/fter/clod/README
+++ b/fter/clod/README
@@ -1,7 +1,8 @@
 
 根据 viewpoint 做 clod， viewpoint 并不固定，此程序的主要目的在于简化 CLOD 的实现，将精力集中在分割上
 
-gridmain: 按照 clod 生成 indices 的 grid 
+gridmain: 按照 clod 生成 indices 的 grid
 levelmapgrid: 多级别的分割并避免了龟裂的情
 levelmapgrid2: 加载高度图
 levelmapgrid3: 带有高度图及光照运算的渲染
+gridmain2: 不假定 pitch 能够恰好覆盖 tile
