--- a/roam/README
+++ b/roam/README
@@ -1,3 +1,6 @@
 
+
 根据文章 Real-Time Dynamic Level of Detail Terrain Rendering with ROAM 实现的 Demo
 文章链接： http://www.gamasutra.com/view/feature/131596/realtime_dynamic_level_of_detail_.php
+
+grid: 使用 ROAM 算法风格简单 grid
